--- a/README
+++ b/README
@@ -1,10 +1,11 @@
-Note that OscarProperties extends the Properties class.  At the time
-this README was written, it uses the parent Properties getProperty()
-methods.  However, locating OscarProperties using the Abstract Syntax
-Tree is more reliable if ASTParser is able to determine when
-getProperty() is a method belonging to OscarProperties rather than
-just Properties.  The file OscarProperties.patch adds the two
-getProperty() methods to OscarProperties.  These methods are:
+Note that oscar.OscarProperties extends the Properties class.  At the
+time this README was written, it uses the parent Properties
+getProperty() methods.  However, locating Properties in the Oscar code
+base using the Abstract Syntax Tree is faster and more reliable if
+ASTParser is able to determine when getProperty() is a method
+belonging to OscarProperties rather than just Properties.  The file
+OscarProperties.patch adds the two getProperty() methods to
+OscarProperties.  These methods are:
 
 	public String getProperty(String key) {
 		return super.getProperty(key);
@@ -15,8 +16,9 @@ getProperty() methods to OscarProperties.  These methods are:
 	}
 
 
-Copy 'OscarProperties.patch' from this directory to the root of the
-oscar git repository.  From there apply the patch using:
+Copy 'OscarProperties.patch' from the patches subdirectory of this
+directory to the root of the oscar git repository.  From there apply
+the patch using:
 
 $ patch src/main/java/oscar/OscarProperties.java < OscarProperties.patch
 
@@ -30,7 +32,18 @@ patched to include the Java files generated from the jsp by adding
 
 <classpathentry kind="src" path="target/generated_jsp_classes"/>
 
-This can be done by copying the file 'classpath.patch' from this
-directory to the root of the Oscar git repo and applying the patch:
+This can be done by copying the file 'classpath.patch' from the
+patches subdirectory of this directory to the root of the Oscar git
+repo and applying the patch:
 
-$patch < classpath.patch
+$ patch < classpath.patch
+
+Also copy the Eclipse settings patch
+"org.eclipse.wst.common.component.patch" to the root of the Oscar git
+repo and apply it using:
+
+$ patch .settings/org.eclipse.wst.common.component < org.eclipse.wst.common.component.patch
+
+It add the line:
+
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated_jsp_classes"/>
